[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://scripts/Network.gd" type="Script" id=2]
[ext_resource path="res://graphic/ButtonHome.png" type="Texture" id=3]
[ext_resource path="res://graphic/ButtonRetry.png" type="Texture" id=4]
[ext_resource path="res://graphic/ButtonHomeHover.png" type="Texture" id=5]
[ext_resource path="res://graphic/ButtonRetryPressed.png" type="Texture" id=6]
[ext_resource path="res://graphic/ButtonRetryHover.png" type="Texture" id=7]
[ext_resource path="res://graphic/ButtonHomePressed.png" type="Texture" id=8]
[ext_resource path="res://graphic/BackgroundMenu.png" type="Texture" id=9]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=10]
[ext_resource path="res://font/ArcadeClassic.tres" type="DynamicFont" id=11]
[ext_resource path="res://Audio/click-button-140881.wav" type="AudioStream" id=12]
[ext_resource path="res://graphic/Black.png" type="Texture" id=13]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 328, 200 )
texture = ExtResource( 9 )

[node name="Home" type="TextureButton" parent="."]
anchor_left = 0.647059
anchor_top = 0.777778
anchor_right = 0.882353
anchor_bottom = 0.888889
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Retry" type="TextureButton" parent="."]
anchor_left = 0.117647
anchor_top = 0.777778
anchor_right = 0.352941
anchor_bottom = 0.888889
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="UI" parent="." instance=ExtResource( 10 )]
anchor_left = 0.0117647
anchor_top = 0.0111111
anchor_right = 1.01176
anchor_bottom = 0.122222
margin_right = -6.10352e-05
margin_bottom = 0.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 144.0
margin_top = 80.0
margin_right = 184.0
margin_bottom = 117.0
rect_scale = Vector2( 10, 10 )
custom_colors/font_color = Color( 0.831373, 0.176471, 0.176471, 1 )
custom_fonts/font = ExtResource( 11 )
text = "GAME
OVER"
align = 1

[node name="ClickSFX1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="ClickSFX2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 340, 360 )
current = true

[node name="Border1" type="Sprite" parent="."]
position = Vector2( -2334.5, 379.5 )
scale = Vector2( 9.10742, 9.36523 )
texture = ExtResource( 13 )

[node name="Border2" type="Sprite" parent="."]
position = Vector2( 2697, 1747 )
scale = Vector2( 10.5664, 4 )
texture = ExtResource( 13 )

[node name="Border3" type="Sprite" parent="."]
position = Vector2( 3045.5, -671 )
scale = Vector2( 9.24023, 5.55469 )
texture = ExtResource( 13 )

[node name="Border4" type="Sprite" parent="."]
position = Vector2( 374, -1048 )
scale = Vector2( 1.52344, 4.08594 )
texture = ExtResource( 13 )

[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_Retry_pressed"]
[connection signal="finished" from="ClickSFX1" to="." method="_on_ClickSFX1_finished"]
[connection signal="finished" from="ClickSFX2" to="." method="_on_ClickSFX2_finished"]
